# depixelization

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: LinkArgParse.cmake  LinkGTest.cmake  LinkSTB.cmake
images/docs/: depixelization.xcf
source/: main.cpp
source/depixelization/public/: ProgramDriver.cpp  ProgramDriver.h  main.cpp
source/reshaper/include/private/: GraphUtils.h  GraphVisualizationStrategy.h  GraphVisualizer.h  HeuristicHelper.h  ImageView.h  SimilarityGraphImpl.h  VoronoiGraphVisualizationStrategy.h  VoronoiImpl.h
source/reshaper/include/reshaper/: CurvesHeuristic.h  DissimilarHeuristic.h  Heuristics.h  Image.h  ImageUtil.h  IslandsHeuristic.h  Pixel.h  SimilarityGraph.h  Voronoi.h
source/reshaper/include/tests/: ImageTests.h  ImageUtilTests.h  ImageViewTests.h  SimilarityGraphTests.h  TestUtility.h  VoronoiTests.h
source/reshaper/private/: CMakeLists.txt  GraphUtils.h  GraphVisualizer.h  HeuristicHelper.h  ImageView.cpp  ImageView.h  Implementation.cpp  Implementation.h  SimilarityGraphImpl.cpp  SimilarityGraphImpl.h  SimilarityGraphVisualizationStrategy.h  VoronoiImpl.cpp  VoronoiImpl.h
source/reshaper/public/: CMakeLists.txt  DissimilarHeuristic.cpp  DissimilarHeuristic.h  Heuristics.cpp  Image.h  ImageUtil.cpp  ImageUtil.h  Pixel.h  SimilarityGraph.cpp  SimilarityGraph.h  SparsePixelsHeuristic.cpp  SparsePixelsHeuristic.h  Voronoi.h
source/reshaper/source/: Image.cpp
source/reshaper/source/private/: CMakeLists.txt  HeuristicHelper.cpp  SimilarityGraphImpl.cpp  VoronoiImpl.cpp
source/reshaper/source/reshaper/: CMakeLists.txt  CurvesHeuristic.cpp  Image.cpp  ImageUtil.cpp  IslandsHeuristic.cpp  SimilarityGraph.cpp  Voronoi.cpp
source/reshaper/source/tests/: CMakeLists.txt  ImageTests.cpp  ImageUtilTests.cpp  ImageViewTests.cpp  SimilarityGraphTests.cpp  VoronoiTests.cpp
source/reshaper/source/tests/data/: curves_edges_solution.txt  curves_voronoi_weld_solution.txt  sparse_pixels_edges_solution.txt
source/reshaper/tests/: CMakeLists.txt  ImageTests.h  ImageUtilTests.h  ImageViewTests.h  SimilarityGraphTests.cpp  SimilarityGraphTests.h  TestUtility.h  VoronoiTests.cpp  VoronoiTests.h
source/reshaper/tests/data/: curves_voronoi_weld_solution.txt  dissimilar_edges_solution.txt  islands_edges_solution.txt
source/utility/public/: CMakeLists.txt  FileUtil.cpp  FileUtil.h  ScopedTimer.h
source/utility/tests/: CMakeLists.txt  UtilityTests.cpp  UtilityTests.h
